--- a/section2.tex
+++ b/section2.tex
@@ -1,4 +1,5 @@
 \section{Grundlagen}
+\label{sec-2}
 
 Im Folgenden sei $X$ (oder $X_1$, $X_2$) stets reeller Hilbertraum mit Skalarprodukt $\dotp\pdot\pdot_X$, Norm $\norm\pdot_X$ und Dualraum $X'$.
 Subskript wird weggelassen falls keine Verwechslungsgefahr besteht.
@@ -104,7 +105,7 @@ Subskript wird weggelassen falls keine Verwechslungsgefahr besteht.
 	\begin{enumerate}
 		\item In Literatur auch ``affine Annahme'' oder ``affin parametrisch'' verwendet.
 			Wir verwenden jedoch ``separierbar'', da $\Theta_l^q$ auch nichtlinear sein können.
-		\item $Q_a, Q_l$ sollten möglichst klein sein, weil diese in die Online-Komplexität eingehen, siehe $\ref{sec-3}$.
+		\item $Q_a, Q_l$ sollten möglichst klein sein, weil diese in die Online-Komplexität eingehen, siehe $\cref{sec-3}$.
 	\end{enumerate}
 \end{bem}
 
@@ -172,7 +173,7 @@ Subskript wird weggelassen falls keine Verwechslungsgefahr besteht.
 	\begin{itemize}
 		\item Das volle Problem kann also ein analytisches Modell (PDE) oder ein detailliertes Modell (PDE-Diskretisierung) darstellen.
 		\item Symmetrie von $a$ wird nicht vorausgesetzt.
-		\item In \ref{sec-4}, \ref{sec-5} werden Verallgemeinerungen von $\prob$ betrachtet.
+		\item In \cref{sec-4}, \cref{sec-5} werden Verallgemeinerungen von $\prob$ betrachtet.
 	\end{itemize}
 \end{bem}
 
