--- a/section2.tex
+++ b/section2.tex
@@ -109,7 +109,7 @@ Subskript wird weggelassen falls keine Verwechslungsgefahr besteht.
 	\end{enumerate}
 \end{bem}
 
-\begin{satz}[Energienorm]
+\begin{satz}[Energienorm] \label{2.5}
 	Sei $a : X \times X \times \p \to \R$ parametrische stetige, koerzive Bilinearform, und $a_s(u,v;\mu) = \frac 1 2 (a(u,v;\mu)+a(v,u;\mu))$ der symmetrische Anteil.
 	Dann ist für $\mu \in \p$
 	\[
