--- a/preamble.tex
+++ b/preamble.tex
@@ -88,6 +88,7 @@
 \newcommand{\set}[1]{\left\{#1\right\}}
 \newcommand{\spn}{\operatorname{span}}
 \newcommand{\seq}[1]{\left(#1\right)}
+\newcommand{\dist}{\operatorname{dist}}
 
 \newcommand{\beginwithlist}{\leavevmode \vspace{-\baselineskip}}
 \newcommand{\beginwithlistbem}{\leavevmode}
