--- a/skript.tex
+++ b/skript.tex
@@ -15,7 +15,8 @@
 
 \begin{tabularx}{0.9\textwidth}{Xl}
 	\small \textsc{Autoren}: & \textsc{Stand}:\\
-	Stefan Simeonov & \today 
+	Stefan Simeonov & \today\\
+	Frank Schneider &
 \end{tabularx}
 
 \vspace{2\baselineskip}
